--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ form {
   margin: 0 auto;
   width: fit-content;
   justify-content: center;
+  flex-direction: column;
   border-radius: 25px;
   align-items: center;
   padding: 1.5rem 2rem;
