--- a/styles.css
+++ b/styles.css
@@ -122,5 +122,6 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 1px;
+    border-radius: 5px;
+    padding: 5px;
 }
