--- a/public/styles.css
+++ b/public/styles.css
@@ -125,3 +125,30 @@ h1 {
     border-radius: 5px;
     padding: 5px;
 }
+
+/* added by Amy for reviews.html */
+.star-rating {
+    display: inline-flex;
+    justify-content: center;
+    font-size: 2em;
+}
+
+.star-rating input[type="radio"] {
+    display: none;
+}
+
+.star-rating label {
+    color: #ccc;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.star-rating input[type="radio"]:checked ~ label {
+    color: gold;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+    color: gold;
+}
+
