--- a/public/styles.css
+++ b/public/styles.css
@@ -163,6 +163,8 @@ h1 {
 
 .bentoContainer {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: white;
     opacity: 0.8;
     min-width: 70%;
