--- a/public/styles.css
+++ b/public/styles.css
@@ -99,6 +99,7 @@ img {
     width: 100%;
     margin-bottom: 1em;
     border-radius: 5%;
+    height: auto;
 }
 
 .formContainer {
@@ -155,32 +156,23 @@ h1 {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    padding: 1em;
 }
 
 @media (max-height: 700px) {
 .bentoContainer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     background-color: white;
     opacity: 0.8;
-    min-width: 70%;
-    min-height: 50vh;
     border-radius: 2em;
-    gap: 1em;
+    gap: 2em;
     padding: 2em;
 }
 }
 
-.col-left {
-    flex: 1;
-    border-radius: 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
-
-.col-right {
+.col-left, .col-right {
     flex: 1;
     border-radius: 2em;
     display: flex;
@@ -189,14 +181,16 @@ h1 {
 }
 
 .row {
-    flex: 1;
+
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
     border-radius: 2em;
 }
 
-.row3 {
-    display: flex;
-    border: none;
-    gap: 1em;
+.row3 .row-col {
+    flex: 1;
 }
 
 .row-col {
@@ -226,4 +220,39 @@ h1 {
 
 .bottom {
     background-color: blue;
+}
+
+
+/*Card content to transform */
+.card {
+    display: flex;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    margin: 1em;
+
+}
+
+.card:hover{
+    transform: rotateY(180deg);
+}
+
+.card-face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.front, .back {
+    border-radius: 1em;    
+}
+
+.back {
+    background: blue;
+    transform: rotateY(180deg);
 }
