--- a/public/styles.css
+++ b/public/styles.css
@@ -97,9 +97,9 @@ input[type=text], input[type=password], input[type=email], input[type=submit], i
 img {
     display: flex;
     width: 100%;
-    margin-bottom: 1em;
     border-radius: 5%;
     height: auto;
+    object-fit: cover;
 }
 
 .formContainer {
@@ -180,14 +180,18 @@ h1 {
     gap: 1em;
 }
 
-.row {
+.col-right{
+    overflow: hidden;
+}
 
-    flex-wrap: wrap;
+.row {
     justify-content: center;
     align-items: center;
     gap: 1em;
     border-radius: 2em;
+    overflow: hidden;
 }
+
 
 .row3 .row-col {
     flex: 1;
@@ -196,6 +200,7 @@ h1 {
 .row-col {
     flex: 1;
     border-radius: 2em;
+    overflow:hidden;
 }
 
 .row1 {
@@ -207,7 +212,7 @@ h1 {
 }
 
 .left {
-    background-color: yellow;
+    background-color: yellow;  
 }
 
 .right {
@@ -230,7 +235,8 @@ h1 {
     perspective: 1000px;
     transform-style: preserve-3d;
     transition: transform 0.6s;
-    margin: 1em;
+    min-height: 300px;
+    width: 100%;
 
 }
 
